2010-07-13  Evan Briones  <erbriones@gmail.com>

	* EditingCommands.cs: Added generic edit command handlers.
	
	* ZoomCommands.cs: Added zoom command handlers.